# pacc-london

./: .gitignore  README.md  prefect.yaml  prefect.yaml.local  pyproject.toml  requirements.txt
.prefect/: flows.json
101/: get_weather.py
102/: get_weather_with_retries.py
103/: notes.md
104/: flows.py
105/: get_weather_with_artifacts.py
106/: get_weather_with_cat_facts.py
202/: s3_download.py
capstone/: earthdata_block.py  earthdata_search_flow.py
