[tool.poetry]
name = "pacc-london"
version = "0.1.0"
description = ""
authors = ["Giorgio Basile <giorgio.basile4@gmail.com>"]
readme = "README.md"
packages = [{include = "pacc_london"}]

[tool.poetry.dependencies]
python = "^3.11"
prefect = "^2.10.16"
prefect-docker = "^0.3.0"
marvin = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
